--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <!-- About Me Section -->
     <section id="about">
-        <h2>Devanshi Agarwal</h2>
+        <h2>Devanshi Agrawal</h2>
         <p>--------------------------------------</p>
     </section>
 </body>
